--- a/卢天宇/React/html文件/1.函数式组件.html
+++ b/卢天宇/React/html文件/1.函数式组件.html
@@ -11,6 +11,8 @@
     <script src="/public/js/react.development.js" type="text/javascript"></script>
     <script src="/public/js/react-dom.development.js" type="text/javascript"></script>
     <script src="/public/js/babel.min.js" type="text/javascript"></script>
+    <script src="/node_modules/antd/dist/antd.js" type="text/javascript"></script>
+    <link href="/node_modules/antd/dist/antd.css" rel="stylesheet" type="text/css" />
     <title>网页标题</title>
 </head>
 
@@ -19,14 +21,17 @@
 </body>
 
 <script type="text/babel">
+    const { useState } = React;
+    const { Button } = antd;
+
     function MyComponent() {
-        let n = 0;
+        const [n, setN] = useState(0);
         return (
             <div>
                 <h1>{n}</h1>
+                <Button type="primary" onClick={() => { setN(n + 1) }}>xx</Button>
                 <button onClick={() => {
-                    n += 1;
-                    console.log(n);
+                    setN(n + 1);
                 }}>我是按钮</button>
             </div>
         )
