--- a/卢天宇/React/小案例/音频播放/index.html
+++ b/卢天宇/React/小案例/音频播放/index.html
@@ -14,7 +14,7 @@
     <script src="./js/antd.js" type="text/javascript"></script>
     <link href="./css/antd.css" rel="stylesheet" type="text/css" />
     <link href="./css/index.css" rel="stylesheet" type="text/css" />
-    <script src="./js/index.js" defer="defer" type="text/javascript"></script>
+    <script src="./js/index.pro.js" defer="defer" type="text/javascript"></script>
     <title>音频播放</title>
 </head>
 
@@ -35,7 +35,8 @@
                 audioList: [],
                 fileList: [],
                 playing: false,
-                checkedList: null
+                checkedList: null,
+                lineWidth: 0,
             };
             this.myRef = React.createRef();
         }
@@ -93,8 +94,12 @@
             // 创建实例
             const audioMap = new AudioMap({
                 delay: 0,
+                playInit: () => {
+                    this.setState({ lineWidth: 0 });
+                },
                 timeUpdate: ({ target }) => {
-                    // console.log('当前：' + target.currentTime, '总共：' + target.duration, '比例：' + (target.currentTime / target.duration) * 100);
+                    const w = (target.currentTime / target.duration) * 100;
+                    this.setState({ lineWidth: w })
                 },
                 playDone: (context) => {
                     message.success({
@@ -178,9 +183,10 @@
         }
 
         render() {
-            const { audioMap, audioList, playing, checkedList, fileList } = this.state;
+            const { audioMap, audioList, playing, checkedList, fileList, lineWidth } = this.state;
             return (
                 <div>
+                    <div className="line" style={{ "width": lineWidth + "%" }}></div>
                     <div className="btn-container">
                         <Button className="btn" onClick={this.getData}>请求</Button>
                         <Button className="btn" onClick={this.play}>{!playing ? "播放音频" : "暂停音乐"}</Button>
